# pipe_base

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  COPYRIGHT  MANIFEST.in  README.md  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  types.txt
.github/: pull_request_template.md
.github/workflows/: build.yaml  build_docs.yaml  codeql-analysis.yml  do_not_merge.yaml  docstyle.yaml  formatting.yaml  mypy.yaml  yamllint.yaml
bin.src/: cmdLineActivator
doc/: conf.py  documenteer.toml  doxygen.conf.in  index.rst  main.dox  manifest.yaml  requirements.txt
doc/_static/pipe_base/: README.md
doc/_static/pipe_base/PipelineTask_Examples/: aperturePipelineTaskV1.py  aperturePipelineTaskV2.py  aperturePipelineTaskV3.py  aperturePipelineTaskV4.py  aperturePipelineTaskV5.py  aperturePipelineTaskV6.py  aperturePipelineTaskV7.py  aperturePipelineTaskV8.py  aperturePipelineTaskV9.py  apertureTask.py
doc/changes/: DM-15325.misc.rst  DM-23330.misc.rst  DM-27416.misc.rst  DM-27492.api.md  DM-2850.removal.rst  DM-28646.feature.rst  DM-30301.other.rst  DM-30649.feature.rst  DM-30702.other.rst  DM-31583.feature.rst  DM-31701.feature.rst  DM-31769.feature.rst  DM-31924.feature.md  DM-32080.bugfix.rst  DM-32459.feature.md  DM-32682.feature.rst  DM-33027.feature.md  DM-33155.feature.rst  DM-33226.misc.rst  DM-33303.misc.rst  DM-33345.misc.rst  DM-33497.api.md  DM-33497.feature.md  DM-33779.feature.md  DM-34105.feature.rst  DM-34155.misc.rst  DM-34590.bugfix.rst  DM-34696.misc.rst  DM-35082.feature.rst  DM-35396.feature.rst  DM-35396.misc.rst  DM-35494.feature.rst  DM-35675.api.rst  DM-35681.bugfix.rst  DM-35697.removal.rst  DM-35721.bugfix.rst  DM-35741.feature.rst  DM-35752.api.md  DM-35917.removal.rst  DM-36145.feature.md  (+145 more)
doc/lsst.pipe.base/: CHANGES.rst  PipelineTask_Examples  command-line-task-argument-reference.rst  command-line-task-config-howto.rst  command-line-task-data-repo-howto.rst  command-line-task-dataid-howto.rst  command-line-task-logging-howto.rst  command-line-task-parallel-howto.rst  command-line-task-prov-howto.rst  command-line-task-retargeting-howto.rst  creating-a-command-line-task.rst  creating-a-pipeline.rst  creating-a-pipelinetask.rst  creating-a-task.rst  index.rst  recording-provenance.rst  task-framework-overview.rst  task-retargeting-howto.rst  testing-a-pipeline-task.rst  testing-pipelines-with-mocks.rst  working-with-pipeline-graphs.rst
doc/pipe_base/: index.rst
examples/: argumentParser.py
examples/PipelineTask_Examples/: aperturePipelineTaskV1.py  aperturePipelineTaskV2.py  aperturePipelineTaskV3.py  aperturePipelineTaskV4.py  aperturePipelineTaskV5.py  aperturePipelineTaskV6.py  aperturePipelineTaskV7.py  aperturePipelineTaskV8.py  aperturePipelineTaskV9.py  apertureTask.py
python/: convert_multiblock.py
python/lsst/pipe/: __init__.py
python/lsst/pipe/base/: __init__.py  _check_qg_outputs.py  _datasetQueryConstraints.py  _dataset_handle.py  _instrument.py  _observation_dimension_packer.py  _quantumContext.py  _status.py  _task_metadata.py  activator.py  all_dimensions_quantum_graph_builder.py  argumentParser.py  automatic_connection_constants.py  blocking_limited_butler.py  builder_spark_context.py  butlerQuantumContext.py  caching_limited_butler.py  cmdLineTask.py  config.py  configOverrides.py  connectionTypes.py  connections.py  dotTools.py  dot_tools.py  exec_fixup_data_id.py  executed_quantum.py  executionButlerBuilder.py  execution_graph_fixup.py  execution_reports.py  gc_metrics.py  graph.py  graphBuilder.py  graph_walker.py  log_capture.py  log_on_close.py  makeLightWeightButler.py  mermaid_tools.py  mp_graph_executor.py  multiplicity.py  pipeTools.py  (+34 more)
python/lsst/pipe/base/cli/: resources.yaml
python/lsst/pipe/base/examples/: ExampleStats.py  NewExampleCmdLineTask.py  test1task.py  test2task.py
python/lsst/pipe/base/formatters/: pexConfig.py
python/lsst/pipe/base/graph/: __init__.py  _implDetails.py  _loadHelpers.py  _versionDeserializers.py  graph.py  graphSummary.py  quantumNode.py
python/lsst/pipe/base/graphBuilderNew/: _customTypes.py  graphBuilder.py
python/lsst/pipe/base/pipeline_graph/: __init__.py  __main__.py  _abcs.py  _dataset_types.py  _edges.py  _exceptions.py  _io.py  _mapping_views.py  _nodes.py  _pipeline_graph.py  _task_subsets.py  _tasks.py  _views.py  cli.py  doc_builder.py  dump.py  expressions.py  io.py
python/lsst/pipe/base/qg/: __init__.py  address.py  graph_model.py  models.py  runtime_model.py  scanner.py  walker.py
python/lsst/pipe/base/quantum_graph/: __init__.py  _common.py  (+7 more)
python/lsst/pipe/supertask/: config.py  configOverrides.py  graph.py  graphBuilder.py  pipeTools.py  pipeline.py  pipelineBuilder.py  resourceConfig.py  resource_config.py  superTask.py  super_task.py
tests/: SConscript  argumentParser.py  cmdLineTask.py  struct.py  task.py  testArgumentParser.py  testCmdLineTask.py  testLogDest.py  testPipeline1.yaml  testPipeline2.yaml  testPipeline3.yaml  testPipeline5.yaml  testShowTasks.py  testStruct.py  testTask.py  test_adjust_all_quanta.py  test_aggregator.py  test_argumentParser.py  test_blocking_limited_butler.py  test_caching_limited_butler.py  test_cliCmdRegisterInstrument.py  test_cmdLineTask.py  test_config.py  test_configOverrides.py  test_config_formatter.py  test_connections.py  test_dataIdContainer.py  test_dataid_match.py  test_dataset_handle.py  test_deferredDatasetRef.py  test_dotTools.py  test_dot_tools.py  test_dynamic_connections.py  test_executionButler.py  test_execution_reports.py  test_execution_storage_class_conversion.py  test_executors.py  test_graphBuilder.py  test_graphSkeleton.py  test_graph_walker.py  (+36 more)
tests/config/: butler-obscore.yaml  storageClasses.yaml
tests/config/datastores/: fileDatastore.yaml
tests/data/: DM-54057.json  args.txt  argumentParserConfig.py
tests/pipelines/: pipeline_separable.yaml  pipeline_simple.yaml  step-exclusion.yaml  steps.yaml  testPipeline2.yaml  testPipeline4.yaml  testPipeline5.yaml
tests/testConfigs/: ReadMe.txt  testCmdLineTaskConfigs.py
ups/: pipe_base.cfg  pipe_base.table
(+71 files in other folders)
