[metadata]
name = pipe_base
description = Pipeline infrastructure for the Rubin Science Pipelines
author = Rubin Observatory Data Management
url = https://github.com/lsst/resources
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  lsst_resources @ git+https://github.com/lsst/resources@main
  lsst_utils @ git+https://github.com/lsst/utils@main
  daf_butler @ git+https://github.com/lsst/daf_butler@main
  pex_config @ git+https://github.com/lsst/pex_config@main
  pydantic
  networkx
  pyyaml >= 5.1
  numpy >= 1.17
  boto3
  botocore
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0
  moto

[options.packages.find]
where=python

[options.package_data]
lsst.pipe.base = py.typed

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E203, W503, N802, N803, N806, N812, N815, N816, W503,
exclude = __init__.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E203 W503 N802 N803 N806 N812 N815 N816
  tests/data/*
